[tool.poetry]
name = "jupyter-sol-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
solana = "^0.25.0"
numpy = "^1.23.0"
pandas = "^1.4.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
